@@ -1,0 +1,23 @@
+.libs
+Makefile
+Makefile.in
+config.h
+config.log
+config.status
+keywordhash.h
+lemon
+lempar.c
+libtool
+mkkeywordhash
+opcodes.c
+opcodes.h
+parse.c
+parse.h
+parse.out
+parse.y
+sqlite3
+sqlite3.h
+sqlite3.pc
+*.la
+*.lo
+*.swp
